--- a/Forward_Propgation_py_v1_0.ipynb
+++ b/Forward_Propgation_py_v1_0.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gackouhamady/FirstNetworkByPraticeCode/blob/main/Forward_Propgation_py_v1_0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gackouhamady/ForwardPropagationPratice/blob/main/Forward_Propgation_py_v1_0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "9IfCWSZWY8If"
       },
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "qXuCviqdY8Ih"
       },
@@ -200,18 +200,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "y_dnIydFY8Ii",
-        "outputId": "c5ea64a5-7e3a-4d9d-a755-8745d70f42b7"
+        "outputId": "1fbd3db3-9d7c-4510-f0f8-68fe45e09b0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[0.35 0.08 0.64 0.02 0.75 0.85]\n",
-            "[0.08 0.93 0.72]\n"
+            "[0.28 0.2  0.84 0.33 0.45 0.74]\n",
+            "[1.   0.05 0.61]\n"
           ]
         }
       ],
@@ -231,15 +234,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "XI-77_lFY8Im",
-        "outputId": "be2a44c7-c0c4-49ea-b1de-11bee8b65713"
+        "outputId": "b6d4e7b2-1f6f-4c87-84c0-ad86ab0233e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "x1 is 0.5 and x2 is 0.85\n"
           ]
@@ -263,17 +269,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "-1L4V459Y8In",
-        "outputId": "e15bc0d7-fbba-499c-f8b3-97e19bb97060"
+        "outputId": "4969ed31-67f9-44c6-9caa-e4c3d6d7f371",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "The weighted sum of the inputs at the first node in the hidden layer is 0.323\n"
+            "The weighted sum of the inputs at the first node in the hidden layer is 1.31\n"
           ]
         }
       ],
@@ -294,25 +303,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "LOPMBWmXY8Ip",
-        "outputId": "24c24e81-62da-47cf-f7da-cf9020fd79d0"
+        "id": "LOPMBWmXY8Ip"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The weighted sum of the inputs at the second node in the hidden layer is 1.2670000000000001\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "### type your answer here\n",
-        "z_12 = x_1 * weights[2] + x_2 * weights[3] + biases[1]\n",
-        "\n",
-        "print('The weighted sum of the inputs at the second node in the hidden layer is {}'.format(z_12))\n"
+        " "
       ]
     },
     {
@@ -338,22 +336,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "ZXBW-qSsY8Iq",
-        "outputId": "e8c9ada6-abc4-428f-e648-52adb42a9810"
+        "id": "ZXBW-qSsY8Iq"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The weighted sum of the inputs at the second node in the hidden layer is 1.267\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print('The weighted sum of the inputs at the second node in the hidden layer is {}'.format(np.around(z_12, decimals=4)))"
+        " "
       ]
     },
     {
@@ -367,17 +356,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "eTq5URdjY8It",
-        "outputId": "5c8d293f-9d88-48f9-f479-e00ddf71124d"
+        "outputId": "2643a106-29c7-4964-be48-6e25a186a597",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "The activation of the first node in the hidden layer is 0.5801\n"
+            "The activation of the first node in the hidden layer is 0.7875\n"
           ]
         }
       ],
@@ -398,26 +390,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "AUoKFwhiY8Iu",
-        "outputId": "98b5758f-c56d-47c7-fe96-90e5368274cb"
+        "id": "AUoKFwhiY8Iu"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The activation of the second node in the hidden layer is 0.7802\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "### type your answer here\n",
-        "a_12 = 1.0 / (1.0 + np.exp(-z_12))\n",
-        "\n",
-        "print('The activation of the second node in the hidden layer is {}'.format(np.around(a_12, decimals=4)))\n",
-        "\n"
+        " "
       ]
     },
     {
@@ -472,14 +452,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "_UbVGGJcY8Iy"
       },
       "outputs": [],
       "source": [
         "### type your answer here\n",
-        "z_2 = a_11 * weights[4] + a_12 * weights[5] + biases[2]\n"
+        " "
       ]
     },
     {
@@ -505,23 +485,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "0t3tolzZY8I1",
-        "outputId": "05bf611c-2bd7-47a3-aedd-c57aac912705"
+        "id": "0t3tolzZY8I1"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The weighted sum of the inputs at the node in the output layer is 1.8182\n"
-          ]
-        }
-      ],
-      "source": [
-        "print('The weighted sum of the inputs at the node in the output layer is {}'.format(np.around(z_2, decimals=4)))"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -534,14 +503,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "ksXHMDO3Y8I2"
       },
       "outputs": [],
       "source": [
         "### type your answer here\n",
-        "a_2 = 1.0 / (1.0 + np.exp(-z_2))\n"
+        " \n"
       ]
     },
     {
@@ -567,22 +536,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "sHOopnpYY8I3",
-        "outputId": "07b0c9f1-0c2e-44e1-bbb9-8da06971b572"
+        "id": "sHOopnpYY8I3"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The output of the network for x1 = 0.5 and x2 = 0.85 is 0.8604\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print('The output of the network for x1 = 0.5 and x2 = 0.85 is {}'.format(np.around(a_2, decimals=4)))"
+        " "
       ]
     },
     {
@@ -944,33 +904,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "v4fjWKQwY8JP",
-        "outputId": "f8caed3b-bbb4-4ceb-ad5a-22b31cdd2331"
+        "id": "v4fjWKQwY8JP"
       },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'network' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipykernel_76/3106426431.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### type your answer here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnode_weights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'layer_1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'node_1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'weights'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mnode_bias\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'layer_1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'node_1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'bias'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mweighted_sum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_weighted_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_weights\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_bias\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'network' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "### type your answer here\n",
-        "node_weights = small_network['layer_1']['node_1']['weights']\n",
-        "node_bias = small_network['layer_1']['node_1']['bias']\n",
-        "\n",
-        "weighted_sum = compute_weighted_sum(inputs, node_weights, node_bias)\n",
-        "print('The weighted sum at the first node in the hidden layer is {}'.format(np.around(weighted_sum[0], decimals=4)))\n",
-        "\n",
-        "\n"
+        "### type your answer here"
       ]
     },
     {
@@ -1057,29 +997,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "2d5BcfOwY8JT",
-        "outputId": "a7d98465-2511-4f63-a4df-37e2de78aad0"
+        "id": "2d5BcfOwY8JT"
       },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'node_weights' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipykernel_76/2163452771.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### type your answer here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnode_output\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mnode_activation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompute_weighted_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_weights\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_bias\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The output of the first node in the hidden layer is {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode_output\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecimals\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'node_weights' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "### type your answer here\n",
-        "\n",
-        "node_output  = node_activation(compute_weighted_sum(inputs, node_weights, node_bias))\n",
-        "print('The output of the first node in the hidden layer is {}'.format(np.around(node_output[0], decimals=4)))\n"
+        "### type your answer here\n"
       ]
     },
     {
@@ -1405,7 +1329,8 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
-    }
+    },
+    "gpuClass": "standard"
   },
   "nbformat": 4,
   "nbformat_minor": 0
