--- a/Forward_Propgation_py_v1_0.ipynb
+++ b/Forward_Propgation_py_v1_0.ipynb
@@ -423,22 +423,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "3S2uBaaDY8Ix",
-        "outputId": "24a2885c-caf1-4391-8d1a-23496f4b7a04"
+        "id": "3S2uBaaDY8Ix"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The activation of the second node in the hidden layer is 0.7802\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print('The activation of the second node in the hidden layer is {}'.format(np.around(a_12, decimals=4)))"
+        " "
       ]
     },
     {
@@ -754,39 +745,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
-        "id": "3RRSdfVNY8JG",
-        "outputId": "7eb3cc38-dc17-4154-b348-c20f14ddcd03"
+        "id": "3RRSdfVNY8JG"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'layer_1': {'node_1': {'weights': array([0.74, 0.48, 0.84, 0.65, 0.66]),\n",
-              "   'bias': array([0.5])},\n",
-              "  'node_2': {'weights': array([0.4 , 0.59, 0.42, 0.57, 0.96]),\n",
-              "   'bias': array([0.39])},\n",
-              "  'node_3': {'weights': array([0.59, 0.95, 0.07, 0.41, 0.41]),\n",
-              "   'bias': array([0.5])}},\n",
-              " 'layer_2': {'node_1': {'weights': array([0.78, 0.98, 0.16]),\n",
-              "   'bias': array([0.13])},\n",
-              "  'node_2': {'weights': array([0.97, 0.6 , 0.77]), 'bias': array([0.44])}},\n",
-              " 'layer_3': {'node_1': {'weights': array([0.94, 0.05]), 'bias': array([0.69])},\n",
-              "  'node_2': {'weights': array([0.43, 0.22]), 'bias': array([0.77])},\n",
-              "  'node_3': {'weights': array([0.71, 0.38]), 'bias': array([0.77])}},\n",
-              " 'output': {'node_1': {'weights': array([0.28, 0.97, 0.91]),\n",
-              "   'bias': array([0.12])}}}"
-            ]
-          },
-          "execution_count": 24,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "### type your answer here\n",
-        "initialize_network(5, 3,[3, 2, 3], 1)\n"
+        "### type your answer here\n"
       ]
     },
     {
@@ -996,6 +961,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "MJZYJWnp4hkA"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 33,
       "metadata": {
@@ -1131,9 +1103,7 @@
       },
       "outputs": [],
       "source": [
-        "### type your answser here\n",
-        "\n",
-        "\n"
+        "### type your answser here\n"
       ]
     },
     {
