--- a/Forward_Propgation_py_v1_0.ipynb
+++ b/Forward_Propgation_py_v1_0.ipynb
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "9IfCWSZWY8If"
       },
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "id": "qXuCviqdY8Ih"
       },
@@ -200,10 +200,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 2,
       "metadata": {
         "id": "y_dnIydFY8Ii",
-        "outputId": "1fbd3db3-9d7c-4510-f0f8-68fe45e09b0d",
+        "outputId": "bdc6ed4f-c67e-4a27-d822-c229f44fee2d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -213,8 +213,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0.28 0.2  0.84 0.33 0.45 0.74]\n",
-            "[1.   0.05 0.61]\n"
+            "[0.95 0.79 0.52 0.26 0.76 0.09]\n",
+            "[0.91 0.72 0.78]\n"
           ]
         }
       ],
@@ -234,10 +234,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "metadata": {
         "id": "XI-77_lFY8Im",
-        "outputId": "b6d4e7b2-1f6f-4c87-84c0-ad86ab0233e9",
+        "outputId": "5d92f243-fdc6-4794-c807-8dbf00980605",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -269,10 +269,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 5,
       "metadata": {
         "id": "-1L4V459Y8In",
-        "outputId": "4969ed31-67f9-44c6-9caa-e4c3d6d7f371",
+        "outputId": "e8a31ec5-c46b-4eca-90ec-281ab3d69b70",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -282,7 +282,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The weighted sum of the inputs at the first node in the hidden layer is 1.31\n"
+            "The weighted sum of the inputs at the first node in the hidden layer is 2.0565\n"
           ]
         }
       ],
@@ -303,13 +303,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {
         "id": "LOPMBWmXY8Ip"
       },
       "outputs": [],
       "source": [
         "### type your answer here\n",
+        "z_12=x_1 * weights[2] + x_2 * weights[3] + biases[1]\n",
         " "
       ]
     },
@@ -336,13 +337,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {
-        "id": "ZXBW-qSsY8Iq"
+        "id": "ZXBW-qSsY8Iq",
+        "outputId": "913dc290-882d-4d09-a667-53647ec02709",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The weighted sum of the inputs at the second node in the hidden layer is 1.201\n"
+          ]
+        }
+      ],
       "source": [
-        " "
+        "print('The weighted sum of the inputs at the second node in the hidden layer is {}'.format(z_12))"
       ]
     },
     {
@@ -356,10 +369,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "metadata": {
         "id": "eTq5URdjY8It",
-        "outputId": "2643a106-29c7-4964-be48-6e25a186a597",
+        "outputId": "4bc4e4a4-d1db-40d7-a686-fb9291025ce4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -369,7 +382,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The activation of the first node in the hidden layer is 0.7875\n"
+            "The activation of the first node in the hidden layer is 0.8866\n"
           ]
         }
       ],
@@ -390,13 +403,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 9,
       "metadata": {
         "id": "AUoKFwhiY8Iu"
       },
       "outputs": [],
       "source": [
         "### type your answer here\n",
+        "a_12 = 1.0 / (1.0 + np.exp(-z_12))\n",
         " "
       ]
     },
@@ -423,13 +437,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 10,
       "metadata": {
-        "id": "3S2uBaaDY8Ix"
+        "id": "3S2uBaaDY8Ix",
+        "outputId": "79259d25-803f-4da4-cc56-4d54299b149b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The activation of the second node in the hidden layer is 0.7687\n"
+          ]
+        }
+      ],
       "source": [
-        " "
+        "print('The activation of the second node in the hidden layer is {}'.format(np.around(a_12, decimals=4)))"
       ]
     },
     {
@@ -443,13 +469,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 12,
       "metadata": {
-        "id": "_UbVGGJcY8Iy"
+        "id": "_UbVGGJcY8Iy",
+        "outputId": "39c2005a-7bac-428a-e0d5-c3392be888b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The weighted sum of the inputs at the last only node  is 1.5230013356180263\n"
+          ]
+        }
+      ],
       "source": [
         "### type your answer here\n",
+        "z_2=a_11 * weights[4] + a_12 * weights[5] + biases[2]\n",
+        "\n",
         " "
       ]
     },
@@ -476,12 +516,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 13,
       "metadata": {
-        "id": "0t3tolzZY8I1"
+        "id": "0t3tolzZY8I1",
+        "outputId": "62a7f255-e287-464e-d88a-e20f9bec39da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The weighted sum of the inputs at the last only node  is 1.5230013356180263\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('The weighted sum of the inputs at the last only node  is {}'.format(z_2))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -494,14 +548,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 14,
       "metadata": {
         "id": "ksXHMDO3Y8I2"
       },
       "outputs": [],
       "source": [
         "### type your answer here\n",
-        " \n"
+        "a_2 = 1.0 / (1.0 + np.exp(-z_2))\n"
       ]
     },
     {
@@ -527,13 +581,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 15,
       "metadata": {
-        "id": "sHOopnpYY8I3"
+        "id": "sHOopnpYY8I3",
+        "outputId": "fd275a55-6936-4f20-bbb2-f8d210506232",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The activation of the last node of the network this 0.821\n"
+          ]
+        }
+      ],
       "source": [
-        " "
+        "print('The activation of the last node of the network this {}'.format(np.around(a_2, decimals=4)))"
       ]
     },
     {
@@ -745,7 +811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "3RRSdfVNY8JG"
       },
@@ -869,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "v4fjWKQwY8JP"
       },
@@ -969,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "2d5BcfOwY8JT"
       },
